--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a id="welcome-carlos-poullets-page" class="anchor" href="#welcome-carlos-poullets-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome Carlos Poullet´s page</h3>
 
-<p>Learning how to code like a girl</p>
+<p>Learning how to code like a girly girl</p>
       </section>
     </div>
 
