--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Carlospoullet.GitHub.io : My home in the internet and in Cornell">
+    <meta name="description" content="Carlospoullet.GitHub.io : My home in the internet">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Carlospoullet´s web page</title>
+    <title>Carlospoullet web page</title>
   </head>
 
   <body>
@@ -30,7 +30,13 @@
         <h3>
 <a id="welcome-carlos-poullets-page" class="anchor" href="#welcome-carlos-poullets-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome Carlos Poullet´s page</h3>
 
-<p>Learning how to code like a girly girl</p>
+<p>Learning how to code like a girly girl at Cornell</p>
+<p> And trying to understand how this thing works</p>
+<p> Este wey es  <a href="https://www.facebook.com/adcbr?fref=ts"> mariquilla <a/>
+   
+</p>
+
+
       </section>
     </div>
 
@@ -41,7 +47,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
